Created Eclipse Project and Enabled Maven Nature

--- a/driver/build-defaults.properties
+++ b/driver/build-defaults.properties
@@ -2,5 +2,6 @@ compiler.debug=on
 compiler.generate.no.warnings=off
 compiler.args=
 compiler.max.memory=128m
-compiler.source.version=1.6
-junit.jar=/opt/netbeans-6.5/platform9/modules/ext/junit-4.5.jar
+compiler.source.version=1.7
+env.JDK_HOME=/Library/Java/JavaVirtualMachines/jdk1.7.0_51.jdk/Contents/Home
+junit.jar=/Users/vincenzoferme/.m2/repository/junit/junit/4.4/junit-4.4.jar
