--- a/common/build-defaults.properties
+++ b/common/build-defaults.properties
@@ -3,4 +3,4 @@ compiler.generate.no.warnings=off
 compiler.args=-Xlint
 compiler.max.memory=128m
 compiler.source.version=1.7
-junit.jar=/Users/vincenzoferme/.m2/repository/junit/junit/4.4/junit-4.4.jar
+#junit.jar=/Users/vincenzoferme/.m2/repository/junit/junit/4.4/junit-4.4.jar
