--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,14 @@ group: edge
 
 language: java
 install: 
-	- ant build
+    - ant build
 jdk:
-	- oraclejdk7
+    - oraclejdk7
+
+cache:
+  directories:
+    - $HOME/.m2
+
 # whitelist
 branches:
   only:
