--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_deploy:
   - git config --global user.email "builds@travis-ci.com"
   - git config --global user.name "Travis CI"
   # configure tag
-  - export GIT_TAG=devel
+  - export GIT_TAG=dev
   # delete tag if it already exists
   - git tag | grep $GIT_TAG | if [ $(grep -c $GIT_TAG) -eq 1 ]; then git tag -d $GIT_TAG; fi
   - git push -q https://$GITHUB_ACCESS_TOKEN:x-oauth-basic@github.com/benchflow/faban :refs/tags/$GIT_TAG
@@ -39,6 +39,7 @@ deploy:
     secure: $GITHUB_ACCESS_TOKEN
   file: 
     - nightly/faban-kit-dev.tar.gz
+    - nightly/faban-agent-dev.tar.gz
   skip_cleanup: true
   on:
     tags: false
