--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_deploy:
   # Clean the v-dev release and tag we are using to release development version in CI
   - sudo wget https://github.com/benchflow/benchflow/raw/dev/ci/clean_v-dev_release.sh -O /usr/bin/clean_v-dev_release.sh
   - sudo chmod +x /usr/bin/clean_v-dev_release.sh
+  - export REPO_NAME=faban
   - /usr/bin/clean_v-dev_release.sh
 
 deploy:
