Adds fabanagents.jar to release

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,10 +34,11 @@ deploy:
   provider: releases
   api_key:
     secure: $GITHUB_ACCESS_TOKEN
-  file: 
+  file:
     - nightly/faban-kit-dev.tar.gz
     - nightly/faban-agent-dev.tar.gz
     - stage/lib/fabandriver.jar
+    - stage/lib/fabanagents.jar
   skip_cleanup: true
   on:
     tags: false
