--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_deploy:
   - sudo wget https://github.com/simonedavico/benchflow/raw/dev/ci/clean_v-dev_release.sh -O /usr/bin/clean_v-dev_release.sh
   - sudo chmod +x /usr/bin/clean_v-dev_release.sh
   - export REPO_NAME=faban
+  - export USER_NAME=simonedavico
   - /usr/bin/clean_v-dev_release.sh
 
 deploy:
